--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -1,41 +1,218 @@
 html {
-  height: 2000px;
+  height: 100%;
   width: 100%;
+  font-family: sans-serif;
 }
 a {
   text-decoration: none;
-  color: white
+  color: silver
 }
 
-header {
-  height: 100px;
-  width: 100%;
-  background-color: red;
+nav {
+  height: 100%;
+  width: 100px;
+  border-bottom blue;
   position: fixed;
-  color: white;
   font-size: 20px;
   font-family: sans-serif;
+  z-index: 50;
+  display: none;
+  /*border-right: 1px solid white*/
+}
+
+body {
+  background-color: #222222;
+}
+
+.titles {
+  height: auto;
+  width: 75px;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  color: silver;
+  border: 2px solid silver
 }
 
 .home {
-  height: 100px;
-  width: 200px;
-  margin: 0;
-  float: left;
+  height: 35px;
+  top: 100px;
+  width: 75px;
+  margin: auto;
+  position: relative;
+  display: flex;
+  border: 2px solid silver
+}
+
+.home h1 {
+  display: flex;
+  margin: auto;
 }
 
 .headeritems {
-  height: 100%;
-  width: 500px;
-  margin: 0;
-  float: right;
-  right: 200px;
+  height: 250px;
+  width: 100px;
+  margin: 200px 0;
   position: relative;
   display: flex;
+  flex-direction: column;
 }
 
 .headeritem {
   display: flex;
   flex-direction: row;
   margin: auto;
+  padding: 5px
+}
+
+#about {
+  height: 225px;
+  width: 100%;
+  margin: 0;
+  display: flex;
+  /*background-color: white;*/
+}
+
+.namepos {
+  height: 150px;
+  width: 300px;
+  color: silver;
+  position: relative;
+  display: flex;
+  margin-top: 25px;
+  margin: auto 100px;
+  flex-direction: column;
+  text-align: center;
+  border: 2px solid silver
+}
+
+.namepos h1 {
+  height: 25px;
+  width: 200px;
+  margin: auto;
+  /*border: 1px solid white;*/
+  font-size: 20px;
+}
+
+.namepos hr{
+  width: 100px
+}
+#personal {
+  height: 75px;
+  width: 90%;
+  margin: auto;
+  display: none
+}
+
+#skills {
+  height: 350px;
+  width: 90%;
+  color: black;
+  margin: auto;
+  background-size: cover;
+  display: flex;
+  flex-direction: row;
+  background-attachment: fixed;
+  border-bottom: 2px solid #222
+}
+
+.skillitem {
+  position: relative;
+}
+
+.skillsbox {
+  height: auto;
+  width: 50%;
+  padding: 50px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px silver solid;
+  opacity: .9;
+  justify-content: center;
+}
+
+.skillsbox ul {
+  height: auto;
+  width: auto;
+  display: flex;
+  color: brown;
+  flex-direction: row;
+  margin: 25px 25px;
+}
+
+i {
+  font-size: 60px;
+  margin: auto;
+}
+
+.skillsbox ul:hover {
+  transform: rotateY(360deg);
+  transition-duration: 1s;
+  background-color: none;
+}
+
+.skillsbox ul:active {
+  transform: rotateY(360deg);
+  transition-duration: 1s;
+  background-color: none;
+}
+#projects {
+
+}
+
+.toprojects {
+  height: auto;
+  width: auto;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  color: silver;
+  border: 2px solid silver
+}
+
+#contact {
+  height: 200px;
+  width: 100%;
+  padding: 15px 0;
+  bottom: 0;
+  position: absolute;
+  border-top: silver 3px solid;
+  /*border-style: 3px solid;*/
+  display: flex;
+  flex-direction: column;
+  color: silver;
+  /*display: none*/
+}
+
+.contact {
+
+}
+
+.contcon {
+  height: 400px;
+  width: 40%;
+  padding: 50px;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  border-radius: 15px;
+  opacity: .9;
+  justify-content: center;
+  color: silver;
+  font-family: sans-serif;
+}
+
+.det {
+  margin: auto;
+  text-align: center;
+  silver
+}
+
+.det:hover {
+  cursor: grab;
+}
+
+.det a {
+  color: silver
 }
