--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -1,4 +1,4 @@
-html {
+/*html {
   height: 2000px;
   width: 100%;
 }
@@ -10,7 +10,7 @@ a {
 header {
   height: 100px;
   width: 100%;
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid blue;
   position: fixed;
 }
 
@@ -43,4 +43,4 @@ header {
   display: flex;
   flex-direction: row;
   margin: auto;
-}
+}*/
