--- a/public/views/main.html
+++ b/public/views/main.html
@@ -5,18 +5,16 @@
         <hr>
         <h1>Web Developer</h1>
       </div>
-    </div>
-    <!-- <div id="personal" class="sec1 sec" class="position: relative">
-      <h1 class="titles">Personal</h1>
-      <div class="aboutcon">
-      <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
-
-      <p><a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md"></a><a href="https://twitter.com/statemaryland?lang=en">@Maryland</a> born and raised</p>
-
-      <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
-
+      <div class="me">
+      <div class="photo"><img src="./imgs/me.jpg"></div>
+      <div class="links">
+        <div class="link"><a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a></div>
+        <div class="link"><i class="fa fa-github" aria-hidden="true"></i></div>
+        <div class="link"><i class="fa fa-linkedin-square" aria-hidden="true"></i></div>
       </div>
-    </div> -->
+      </div>
+    </div>
+
     <div id="skills" class="sec2 sec">
       <div class="skillsbox skillitem" >
           <ul><a href="https://angularjs.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-angularjs-plain-wordmark"></i></a></ul>
@@ -34,13 +32,22 @@
           <ul></ul>
           <ul></ul> -->
       </div>
-      <h1 class="toprojects skillitem">
-        <a href="#projects">Projects</a>
+      <button class="probutton">
+      <a href="#projects">
+      <h1 class="toprojects">
+        <!-- <a href="#projects"> -->
+          Projects
+        <!-- </a> -->
       </h1>
+      </a>
+    </button>
     </div>
 
     <div id="contact" class="sec4 sec">
       <h1 class="titles">Contact</h1>
+      <div class="stamp">
+        <h1>All Rights Reserved Sergio Barker@2017</h1>
+      </div>
       <div class="contcon">
       <div id="phone" class="det">
         <a href="tel:+8013583800">
