--- a/views/main.html
+++ b/views/main.html
@@ -1,9 +1,9 @@
 <body>
     <div id="about" class="sec">
       <div class="namepos">
-        <h1>Sergio Barker</h1>
+        <h1>SERGIO BARKER</h1>
         <hr>
-        <h1>Web Developer</h1>
+        <h1>WEB DEVELOPER</h1>
       </div>
       <div class="me">
       <div class="photo"><img src="./imgs/me.jpg"></div>
@@ -33,18 +33,16 @@
           <ul></ul> -->
       </div>
       <button class="probutton">
-      <a href="#projects">
+        <a href="#projects" style="color: inherit">
       <h1 class="toprojects">
-        <!-- <a href="#projects"> -->
-          Projects
-        <!-- </a> -->
+          PROJECTS
       </h1>
-      </a>
+        </a>
     </button>
     </div>
 
     <div id="contact" class="sec4 sec">
-      <h1 class="titles">Contact</h1>
+      <h1 class="titles">CONTACT</h1>
       <div class="stamp">
         <h1>All Rights Reserved Sergio Barker@2017</h1>
       </div>
