--- a/views/main.html
+++ b/views/main.html
@@ -6,7 +6,7 @@
         <h1>WEB DEVELOPER</h1>
       </div>
       <div class="me">
-      <div class="photo"><img src="./imgs/me.jpg"></div>
+      <div class="photo"></div>
       <div class="links">
         <div class="link"><a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a></div>
         <div class="link"><i class="fa fa-github" aria-hidden="true"></i></div>
@@ -33,7 +33,7 @@
           <ul></ul> -->
       </div>
       <button class="probutton">
-        <a href="#projects" style="color: inherit">
+        <a ui-sref="projects" style="color: inherit">
       <h1 class="toprojects">
           PROJECTS
       </h1>
