--- a/views/projects.html
+++ b/views/projects.html
@@ -1,4 +1,4 @@
-<!-- <div id="projects" class="sec3 sec">
+<div id="projects" class="sec3 sec">
   <h1 class="titles">Projects</h1>
   <div class="projcon">
     <div id="starpro" class="project">
@@ -17,4 +17,4 @@
       <h1 class="pronam">RockshowZ</h1>
     </div>
   </div>
-</div> -->
+</div>
