--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,7 +1,9 @@
 @font-face {
   font-family: JosifinSans-Regular;
-  src: url(JosefinSans-Regular.ttf);
+  src: url(./fonts/JosefinSans-Regular.ttf);
 }
+
+@media only screen and (min-width: 1426px) { 
 
 html {
   height: 100%;
@@ -276,4 +278,6 @@ i {
   position: absolute;
   left: 25px;
   bottom: 10px;
+}
+
 }
